--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.441.0",
+    "next-themes": "^0.3.0"
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
